--- a/src/os2datascanner/projects/static/scss/components/_icons.scss
+++ b/src/os2datascanner/projects/static/scss/components/_icons.scss
@@ -104,15 +104,18 @@ Single-colored icons can be modified like so:
 
   display: none;
 
-  svg {
+  svg, .material-icons {
     fill: var(--color-text-secondary);
     height: 1em;
     width: 1em;
-
     vertical-align: text-top;
   }
 
   @media (min-width: $break-lg) {
     display: inline;
   }
+}
+
+.material-icons#warning {
+  color: var(--color-warning);
 }
