[#59726] Add translations + update CHANGELOG.md

--- a/src/os2datascanner/projects/report/reportapp/templates/components/statistics/dpo_statistics_template.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/statistics/dpo_statistics_template.html
@@ -75,10 +75,8 @@
           <hr class="button-group__divider">
           <a href="/statistics/dpo/csv/"
              class="button button--transparent-button"
-             aria-label="{% trans 'Export the DPO data as a csv-file adn download it' %}"
-             title="{% trans 'Click here to export the DPO data as a csv-file and download it' %}">
-            {% trans "Export CSV" %}
-          </a>
+             aria-label="{% trans 'Export DPO data as a csv-file' %}"
+             title="{% trans 'Click here to export DPO data as a csv-file' %}">{% trans "Export CSV" %}</a>
         </div>
       </div>
  
