--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_ask_run.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_ask_run.html
@@ -24,12 +24,18 @@
         <h3>{% trans "Are you sure you want to start the scanner?" %}</h3>
 
         <p>
-          <a href="{{ run_redirect }}"
-             class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
+          {% if partial_scan %}
+            <a href="{{ run_redirect }}"
+               class="button button--cta-button run-scan-button"
+               title="{% trans "Perform a partial scan, ignoring all sources which have not changed since last scan." %}">{% trans "Partial scan" %}</a>
+            <a href="{{ run_redirect }}?full=true"
+               class="button button--cta-button run-scan-button"
+               title="{% trans "Perform a full scan, scanning all sources irregardless if they were scanned previously." %}">{% trans "Full scan" %}</a>
+          {% else %}
+            <a href="{{ run_redirect }}"
+               class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
+          {% endif %}
 
-          <a href="{{ run_redirect }}?full=true"
-             class="button button--cta-button run-scan-button">{% trans "Full scan" %}</a>
- 
           {#     Setting style=".." here is not best practice, but we want to still have the styling from #}
           {#      assigned classes when element is shown. Hidden will not work because display is set in css #}
           <a id="waiting-scanner-run-btn"
