--- a/src/os2datascanner/projects/report/reportapp/templates/components/common/scripts.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/common/scripts.html
@@ -8,7 +8,9 @@
   <script src="{% static 'js/tables/tableBehavior.js' %} "></script>
   <script src="{% static 'js/reports/show-more.js' %} "></script>
   <script src="{% static 'js/filters/options.js' %} "></script>
-  <script src="{% static "js/reports/distributeElement.js" %}"></script>
-  <script src="{% static "js/modals/snackBars.js" %}"></script>
+  <script src="{% static 'js/reports/distributeElement.js' %}"></script>
+  <script src="{% static 'js/modals/snackBars.js' %}"></script>
+  <script src="{% static 'js/modals/popover.js' %}"></script>
+
 
 {% endblock %}
