--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
@@ -78,22 +78,13 @@
               {% endif %}
 
               {% if document_report.problem %}
-                <div class="popoper">
-                  <i id="warning" class="material-icons popover popover__icon">warning</i>
-                  <div class="popover popover__container">
-                    <div class="popover popover__content">
-                      <div class="popover popover__text-container">
-                        <span class="popoper popover__status">{% translate "No further action required" %}:</span>
-                        <div>
-                          <span class="popoper popover__title">{% translate "A temporary error occurred during the latest check of this match" %}. {% translate "OSdatascanner will automatically check this match again as part of the next scan" %}.</span>
-                          <span class="popoper popover__sub-title"></span>
-                        </div>
-                      </div>
-                      <div class="popover popover__error-container">
-                        <span class="popover popover__error-text">{{ document_report.problem.message }}</span>
-                      </div>
-                    </div>
-                  </div>
+                <!-- Trigger for the popover -->
+                <i class="material-icons popoverTrigger popover__trigger-element table__icon--warning"
+                   data-popover-id="popover-{{ document_report.pk }}">warning</i>
+ 
+                <!-- Popover content -->
+                <div id="popover-{{ document_report.pk }}" class="popover popover--yellow">
+                  {% include "components/modals/popover_component.html" with popover_data=popover_data error_text=document_report.problem.message %}
                 </div>
               {% endif %}
 
