--- a/src/os2datascanner/projects/report/reportapp/templates/statistics.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/statistics.html
@@ -17,23 +17,25 @@
 
 {% block scripts %}
   <script src="{% url 'jsi18n' %}"></script>
-  <script src="{% static "3rdparty/htmx.min.js" %}"></script>
-  <script src="{% static "js/filters/options.js" %}"></script>
-  <script src="{% static "3rdparty/jquery-3.6.0.min.js" %} "></script>
-  <script src="{% static "3rdparty/chart-4.0.1.min.js" %}"></script>
-  <script src="{% static "3rdparty/chartjs-plugin-datalabels.min.js" %}"></script>
-  <script src="{% static "3rdparty/hammerjs.min.js" %}"></script>
-  <script src="{% static "3rdparty/chartjs-plugin-zoom.min.js" %}"></script>
-  <script src="{% static "js/tables/tableBehavior.js" %}"></script>
+  <script src="{% static '3rdparty/htmx.min.js' %}"></script>
+  <script src="{% static 'js/filters/options.js' %}"></script>
+  <script src="{% static '3rdparty/jquery-3.6.0.min.js' %} "></script>
+  <script src="{% static '3rdparty/chart-4.0.1.min.js' %}"></script>
+  <script src="{% static '3rdparty/chartjs-plugin-datalabels.min.js' %}"></script>
+  <script src="{% static '3rdparty/hammerjs.min.js' %}"></script>
+  <script src="{% static '3rdparty/chartjs-plugin-zoom.min.js' %}"></script>
+  <script src="{% static 'js/tables/tableBehavior.js' %}"></script>
   {% if request.path == "/statistics/dpo/" %}
-    <script src="{% static "js/charts/chartHelpers.js" %}"></script>
+    <script src="{% static 'js/charts/chartHelpers.js' %}"></script>
   {% elif request.path == "/statistics/leader/" %}
-    <script src="{% static "js/leaderview/leaderOverview.js" %}"></script>
+    <script src="{% static 'js/leaderview/leaderOverview.js' %}"></script>
   {% endif %}
-  <script src="{% static "js/charts/pieCharts.js" %}"></script>
-  <script src="{% static "js/charts/doughnutCharts.js" %}"></script>
-  <script src="{% static "js/charts/lineCharts.js" %}"></script>
+  <script src="{% static 'js/charts/pieCharts.js' %}"></script>
+  <script src="{% static 'js/charts/doughnutCharts.js' %}"></script>
+  <script src="{% static 'js/charts/lineCharts.js' %}"></script>
   <script src="{% static 'js/charts/userCharts.js' %}"></script>
-  <script src="{% static "js/charts/barCharts.js" %}"></script>
+  <script src="{% static 'js/charts/barCharts.js' %}"></script>
+  <script src="{% static 'js/modals/popover.js' %}"></script>
+
 
 {% endblock %}
