--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form.html
@@ -208,82 +208,30 @@
               {% if form.scan_site_drives %}
                 <div id="{{ form.scan_site_drives.auto_id }}_container"
                      class="form__group{% if form.scan_site_drives.errors %} has-error{% endif %}">
-                  <div class="ds-checkbox">
-                    <input type="checkbox"
-                           class="checkbox"
-                           id="id_{{ form.scan_site_drives.name }}"
-                           name="{{ form.scan_site_drives.name }}"
-                           value="{{ form.scan_site_drives.name }}"
-                           {% if form.scan_site_drives.value %}checked="checked"{% endif %} />
-                    <label for="id_{{ form.scan_site_drives.name }}" tabindex="0">{{ form.scan_site_drives.label }}</label>
-                  </div>
-
-                  {% if form.scan_site_drives.help_text %}
-                    <span class="form__help-text">{{ form.scan_site_drives.help_text }}</span>
-                  {% endif %}
-
-                  {% if form.scan_site_drives.errors %}{{ form.scan_site_drives.errors }}{% endif %}
+                  {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.scan_site_drives %}
                 </div>
               {% endif %}
 
               {% if form.scan_user_drives %}
                 <div id="{{ form.scan_user_drives.auto_id }}_container"
                      class="form__group{% if form.scan_user_drives.errors %} has-error{% endif %}">
-                  <div class="ds-checkbox">
-                    <input type="checkbox"
-                           class="checkbox"
-                           id="id_{{ form.scan_user_drives.name }}"
-                           name="{{ form.scan_user_drives.name }}"
-                           value="{{ form.scan_user_drives.name }}"
-                           {% if form.scan_user_drives.value %}checked="checked"{% endif %} />
-                    <label for="id_{{ form.scan_user_drives.name }}" tabindex="0">{{ form.scan_user_drives.label }}</label>
-                  </div>
-
-                  {% if form.scan_user_drives.help_text %}
-                    <span class="form__help-text">{{ form.scan_user_drives.help_text }}</span>
-                  {% endif %}
-
-                  {% if form.scan_user_drives.errors %}{{ form.scan_user_drives.errors }}{% endif %}
+                  {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.scan_user_drives %}
                 </div>
               {% endif %}
 
               {% if form.download_sitemap %}
                 <div id="{{ form.download_sitemap.auto_id }}_container"
                      class="form__group{% if form.download_sitemap.errors %} has-error{% endif %}">
-                  <div class="ds-checkbox">
-                    <input type="checkbox"
-                           class="checkbox"
-                           id="id_{{ form.download_sitemap.name }}"
-                           name="{{ form.download_sitemap.name }}"
-                           value="{{ form.download_sitemap.name }}"
-                           {% if form.download_sitemap.value %}checked="checked"{% endif %} />
-                    <label for="id_{{ form.download_sitemap.name }}">{{ form.download_sitemap.label }}</label>
-                  </div>
-
-                  {% if form.download_sitemap.help_text %}
-                    <span class="form__help-text">{{ form.download_sitemap.help_text }}</span>
-                  {% endif %}
-
-                  {% if form.download_sitemap.errors %}{{ form.download_sitemap.errors }}{% endif %}
+                  {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.download_sitemap %}
                 </div>
               {% endif %}
 
               {% if form.reduce_communication %}
                 <div id="{{ form.reduce_communication.auto_id }}_container"
                      class="form__group{% if form.reduce_communication.errors %} has-error{% endif %}">
-                  <div class="ds-checkbox">
-                    <input type="checkbox"
-                           class="checkbox"
-                           id="id_{{ form.reduce_communication.name }}"
-                           name="{{ form.reduce_communication.name }}"
-                           value="{{ form.reduce_communication.name }}"
-                           {% if form.reduce_communication.value %}checked="checked"{% endif %} />
-                    <label for="id_{{ form.reduce_communication.name }}">{{ form.reduce_communication.label }}</label>
-                  </div>
-
-                  {% if form.reduce_communication.help_text %}
-                    <span class="form__help-text">{{ form.reduce_communication.help_text|capfirst }}</span>
-                  {% endif %}
+                  {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.reduce_communication %}
+                </div>
+              {% endif %}
 
                   {% if form.reduce_communication.errors %}{{ form.reduce_communication.errors }}{% endif %}
                 </div>
@@ -620,26 +568,26 @@
               <div id="select_scan_rules_container">
 
                 {% if form.do_ocr %}
-                  <div class="checkbox-group">
+                  <div class="checkbox-group form__group">
                     {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.do_ocr %}
                   </div>
                 {% endif %}
                 {% if form.do_last_modified_check %}
-                  <div class="checkbox-group">
+                  <div class="checkbox-group form__group">
                     {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.do_last_modified_check %}
                   </div>
  
                 {% endif %}
 
                 {% if form.keep_false_positives %}
-                  <div class="checkbox-group">
+                  <div class="checkbox-group form__group">
                     {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.keep_false_positives %}
                   </div>
                 {% endif %}
  
                 {% if form.only_notify_superadmin %}
 	
-                  <div class="checkbox-group">
+                  <div class="checkbox-group form__group">
                     {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.only_notify_superadmin %}
                   </div>
  
@@ -647,38 +595,38 @@
 
                 {% if form.scan_deleted_items_folder %}
 	
-                  <div class="checkbox-group">
+                  <div class="checkbox-group form__group">
                     {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.scan_deleted_items_folder %}
                   </div>
                 {% endif %}
 
                 {% if form.scan_syncissues_folder %}
 	
-                  <div class="checkbox-group">
+                  <div class="checkbox-group form__group">
                     {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.scan_syncissues_folder %}
                   </div>
                 {% endif %}
 	
                 {% if form.skip_super_hidden %}
-                  <div class="checkbox-group">
+                  <div class="checkbox-group form__group">
                     {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.skip_super_hidden %}
                   </div>
                 {% endif %}
 
                 {% if form.unc_is_home_root %}
-                  <div class="checkbox-group">
+                  <div class="checkbox-group form__group">
                     {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.unc_is_home_root %}
                   </div>
                 {% endif %}
 
                 {% if form.do_link_check %}
-                  <div class="checkbox-group">
+                  <div class="checkbox-group form__group">
                     {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.do_link_check %}
                   </div>
                 {% endif %}
 
                 {% if form.exclude_urls %}
-                  <div class="input-group">
+                  <div class="input-group form__group">
                     {% include "components/scanner/scanner_form_input_field.html" with field=form.exclude_urls placeholder=form.exclude_urls.field.widget.attrs.placeholder %}
                   </div>
                 {% endif %}
