--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form_checkbox_field.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form_checkbox_field.html
@@ -6,8 +6,9 @@
          value="{{ field.name }}"
          {% if field.field.disabled %}disabled{% endif %}
          {% if field.value %}checked="checked"{% endif %}>
-  <label for="id_{{ field.name }}"
-         {% if field.help_text %}title="{{ field.help_text }}" style="cursor: help"{% endif %}>
-    {{ field.label }}
-  </label>
+  <label for="id_{{ field.name }}">{{ field.label }}</label>
 </div>
+
+{% if field.help_text %}<span class="form__help-text">{{ field.help_text|capfirst }}</span>{% endif %}
+
+{% if field.errors %}{{ field.errors }}{% endif %}
