--- a/src/os2datascanner/projects/admin/core/templates/components/background_job.html
+++ b/src/os2datascanner/projects/admin/core/templates/components/background_job.html
@@ -3,37 +3,44 @@
 
 {% with exec_state_value=job.exec_state.value %}
 
-<div class="response"
+  <div class="response"
+       {% if exec_state_value == "waiting" or exec_state_value == "running" %} hx-get="{% url 'background_job_status_widget' pk=job.pk %}" hx-trigger="every 1s" hx-swap="outerHTML" {% endif %}>
     {% if exec_state_value == "waiting" or exec_state_value == "running" %}
-    hx-get="{% url 'background_job_status_widget' pk=job.pk %}"
-    hx-trigger="every 1s"
-    hx-swap="outerHTML"
-    {% endif %}>
-    {% with exec_state_value=job.exec_state.value %}
-      {% if exec_state_value == "finished" %}
-        <span class="response-icon response-icon--success">
-          <i class="material-icons">check</i>
-        </span>
-      {% elif exec_state_value == "failed" %}
-        <span class="response-icon response-icon--error">
-          <i class="material-icons">error</i>
-        </span>
-      {% elif exec_state_value == "waiting" or exec_state_value == "running" %}
-        <span class="response-icon response-icon--waiting">
-          <i class="material-icons">hourglass_top</i>
-        </span>
-      {% endif %}
-      {% if exec_state_value != "waiting" %}
-        <span class="response-text">
-          {% if exec_state_value == "finished" %}
-            {% trans 'last updated'|capfirst %},
-          {% else %}
-            {{ job.exec_state.label|capfirst }},
-          {% endif %}
-          {{ job.changed_at|date:'d-m-Y H:i' }}
-        </span>
-      {% endif %}
-    {% endwith %}
-</div>
+      <button class="button button--outline-button button--icon-button"
+              hx-get="{% url 'background_job_cancel' pk=job.pk %}"
+              hx-swap="outerHTML"
+              hx-target="closest div.response"
+              hx-trigger="click">
+        <i class="material-icons">cancel</i>
+      </button>
+    {% endif %}
+    {% if exec_state_value == "finished" %}
+      <span class="response-icon response-icon--success">
+        <i class="material-icons">check</i>
+      </span>
+    {% elif exec_state_value == "failed" %}
+      <span class="response-icon response-icon--error">
+        <i class="material-icons">error</i>
+      </span>
+    {% elif exec_state_value in "waiting running cancelling" %}
+      <span class="response-icon response-icon--waiting">
+        <i class="material-icons">hourglass_top</i>
+      </span>
+    {% elif exec_state_value == "cancelled" %}
+      <span class="response-icon response-icon--cancelled">
+        <i class="material-icons">block</i>
+      </span>
+    {% endif %}
+    {% if exec_state_value != "waiting" %}
+      <span class="response-text">
+        {% if exec_state_value == "finished" %}
+          {% trans 'last updated'|capfirst %},
+        {% else %}
+          {{ job.exec_state.label|capfirst }},
+        {% endif %}
+        {{ job.changed_at|date:'d-m-Y H:i' }}
+      </span>
+    {% endif %}
+  </div>
 
 {% endwith %}
