--- a/src/os2datascanner/projects/static/scss/_vars.scss
+++ b/src/os2datascanner/projects/static/scss/_vars.scss
@@ -105,4 +105,9 @@
   --color-grey-dark: #777777;
   --color-grey-light: #f5f5f5;
   --color-white: #fff; // ????
+
+
+  // Size vars
+  --width-sidemenu: 15rem;
+  --padding-content: 5rem;
 }
