--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/org_list.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/org_list.html
@@ -23,7 +23,7 @@
     <circle id="circle" cx="50" cy="50" r="45"></circle>
   </svg>
 
-  <div class="org-table">{% include "organizations/org_table.html" %}</div>
+  <div class="organizations-overview">{% include "organizations/org_table.html" %}</div>
 
 
 {% endblock %}
