--- a/src/os2datascanner/projects/report/reportapp/templates/components/user/outlook_category_settings.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/user/outlook_category_settings.html
@@ -8,14 +8,17 @@
 <table class="userprofile-table outlook-settings">
   <tbody>
     <form id="settings-form"
-          hx-post="{% url "outlook-category-settings" %}"
+          hx-post="{% url 'outlook-category-settings' %}"
           hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
           hx-trigger="change from:input, change from:select "
           hx-vals='{"outlook_setting": "true" }'>
       {% csrf_token %}
       <tr>
         <td>{% trans "Categorize emails" %}</td>
-        <td>{{ outlook_settings_form.categorize_email }}</td>
+        <td class="ds-checkbox">
+          {{ outlook_settings_form.categorize_email }}
+          <label for="{{ outlook_settings_form.categorize_email.id_for_label }}"></label>
+        </td>
       </tr>
       <tr>
         <td>{% trans "Match category colour" %}</td>
