--- a/src/os2datascanner/projects/static/scss/components/_forms.scss
+++ b/src/os2datascanner/projects/static/scss/components/_forms.scss
@@ -19,6 +19,58 @@
     max-width: 65rem;
   }
 
+  &__row {
+    &__item {
+      padding-top: 0.5rem;
+  
+      input, select {
+        margin-top: 0.5rem !important; 
+      }
+    }
+  
+    &--general,
+    &--tab-access,
+    &--support,
+    &--dpo,
+    &--outlook {
+      margin: 3rem 0;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+
+    &--general {
+      margin: 0 0 3rem;
+    }
+  
+    &--outlook {
+      gap: 1rem;
+  
+      .form__row__item {
+        padding-top: 0.5rem;
+  
+        >label:first-child {
+          font-weight: 600;
+          margin-bottom: 1rem;
+        }
+
+        &__radiocontainer {
+          display: flex;
+          flex-direction: column;
+          gap: 0.75rem;
+        }
+
+        .radio-button,
+        &__checkboxcontainer {
+          margin-top: 0.75rem;
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
+        }
+      }
+    }
+  }
+
   .form__group {
     display: block;
 
