--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
@@ -1,5 +1,7 @@
 {% load i18n l10n humanize admin_urls handle_extras %}
+
 {% with type=document_report.matches.handle|find_type_label %}
+
   {% with frag=document_report.matches.matches|merge_renderable_match_fragments %}
     <tr data-type="{{ type }}"
         {% if request.session.last_opened == document_report.pk|unlocalize %}class="highlighted"{% endif %}>
@@ -11,19 +13,23 @@
                  name="table-checkbox"
                  class="datatable-checkbox"
                  data-report-pk="{{ document_report.pk|unlocalize }}" />
+
           <label for="table-checkbox-{{ document_report.pk|unlocalize }}"
                  aria-label="{% trans 'Select result' %}"
                  title="{% trans 'Select result' %}"></label>
         </div>
       </td>
+
       <td class="datatable__column--name">
         <div class="tooltip">
           <div class="overflow-ellipsis">
             <strong data-tooltip-text>{{ document_report.matches.handle.presentation_name }}</strong>
           </div>
         </div>
+
         {% comment %} HTML is a programming language btw {% endcomment %}
-        {% if document_report.last_opened_time or document_report.matches.handle|present_url or type != 'ews' and type != 'msgraph-mail' and document_report.matches.handle|find_file_folder %}
+
+        {% if document_report.last_opened_time or document_report.matches.handle|present_url or type != 'ews' and type != 'msgraph-mail' and document_report.matches.handle|find_parent:type|find_file_folder %}
           <div class="hit-link">
             <div class="button-group"
                  name='open-button'
@@ -61,23 +67,23 @@
                 </span>
               {% endif %}
               {% if show_file_delete_button and type == 'msgraph-files' %}
-                <span class="delete-file">
-                  <button class="button button--deletion-button"
-                          id="{{ document_report.pk }}"
-                          name='delete-file'
-                          title="{% trans 'Deletes file from your online drive' %}"
-                          hx-post="{% url 'delete-file' document_report.pk|unlocalize %}"
-                          hx-push-url="false"
-                          hx-swap="none"
-                          hx-trigger="click"
-                          hx-indicator="closest tr"
-                          hx-confirm="{% blocktrans %}You are about to delete selected file from your online drive. OSdatascanner cannot reverse this action. Are you sure?{% endblocktrans %}">
-                    {% trans "Delete" %}
-                  </button>
-                </span>
-              {% endif %}
+              <span class="delete-file">
+                <button class="button button--deletion-button"
+                        id="{{ document_report.pk }}"
+                        name='delete-file'
+                        title="{% trans 'Deletes file from your online drive' %}"
+                        hx-post="{% url 'delete-file' document_report.pk|unlocalize %}"
+                        hx-push-url="false"
+                        hx-swap="none"
+                        hx-trigger="click"
+                        hx-indicator="closest tr"
+                        hx-confirm="{% blocktrans %}You are about to delete selected file from your online drive. OSdatascanner cannot reverse this action. Are you sure?{% endblocktrans %}">
+                  {% trans "Delete" %}
+                </button>
+              </span>
+            {% endif %}
 
-              {% if document_report.problem %}
+              {% if settings.ALLOW_SHOW_ERRORS and document_report.problem %}
                 <!-- Trigger for the popover -->
                 <i class="material-icons popoverTrigger popover__trigger-element table__icon--warning"
                    data-popover-id="popover-{{ document_report.pk }}">warning</i>
@@ -253,33 +259,6 @@
         </table>
       </td>
     </tr>
-    {% if settings.ALLOW_SHOW_ERRORS and document_report.problem %}
-      <tr class="warning short">
-        <td>
-          <i class="material-icons" aria-hidden="true">warning</i>
-        </td>
-        <td colspan="{% if '/archive' in request.path %}6{% else %}5{% endif %}">
-          <i>{% translate "A temporary error occurred during the latest check of this match" %}</i>
-          <br>
-          <small>{% translate "OSdatascanner will automatically check this match again as part of the next scan" %}</small>
-        </td>
-        <td class="datatable__column--actions">
-          <div class="button-group text-align-right">
-            <button type="button"
-                    class="toggle-next-row button button--caret-button"
-                    title="{% translate 'Show/hide technical details of the error' %}">
-              <i id="expand_more" class="material-icons" aria-hidden="true">expand_more</i>
-            </button>
-          </div>
-          <i>
-          </i>
-        </td>
-      </tr>
-      <tr class="warning narrow problem" hidden>
-        <td colspan="500">
-          <textarea readonly="true">{{ document_report.problem.message }}</textarea>
-        </td>
-      </tr>
-    {% endif %}
+
   {% endwith %}
 {% endwith %}
