[#60073] Also use the DPO_CSV_EXPORT-setting in the template

--- a/src/os2datascanner/projects/report/reportapp/templates/components/statistics/dpo_statistics_template.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/statistics/dpo_statistics_template.html
@@ -72,11 +72,13 @@
                   hx-include="[id='filter_form'], [id='dropdown_options']"
                   hx-params="not scannerjob"
                   hx-indicator="#report-page-indicator">{% trans "Reset" %}</button>
-          <hr class="button-group__divider">
-          <a href="/statistics/dpo/csv/"
-             class="button button--transparent-button"
-             aria-label="{% trans 'Export DPO data as a csv-file' %}"
-             title="{% trans 'Click here to export DPO data as a csv-file' %}">{% trans "Export CSV" %}</a>
+          {% if settings.DPO_CSV_EXPORT %}
+            <hr class="button-group__divider">
+            <a href="/statistics/dpo/csv/"
+               class="button button--transparent-button"
+               aria-label="{% trans 'Export DPO data as a csv-file' %}"
+               title="{% trans 'Click here to export DPO data as a csv-file' %}">{% trans "Export CSV" %}</a>
+          {% endif %}
         </div>
       </div>
  
