--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form.html
@@ -608,7 +608,7 @@
                 {% endif %}
 
                 {% if form.scan_attachments %}
-                  <div class="checkbox-group">
+                  <div class="checkbox-group form__group">
                     {% include "components/scanner/scanner_form_checkbox_field.html" with field=form.scan_attachments %}
                   </div>
                 {% endif %}
